--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 file.path: d:/
 server.port= 8098
+
+
+
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 100MB
